--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,11 +27,16 @@
         <% end %>
         <div class="topLeft">
           <% if current_user%>
-            Hi!, <%= current_user.name %> 
+            <span class="glyphicon glyphicon-user" aria-hidden="true"></span> <%= current_user.name %>
             <%= link_to("登出", destroy_user_session_path, :method => :delete ) %>
           <% elsif %>
             <%= link_to("登入", new_user_session_path ) %>
           <% end%>
+          <div class="cart">
+            <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>
+            購物車(0) 
+            <%= session[:now].nil? ? session[:now] = Time.now : session[:now] %>
+          </div>
         </div>
         <div class="left" style="display: inline-block">
           <%= image_tag "FB-f-Logo__blue_100.png", width: "20px", height: "20px" %> facebook
@@ -53,7 +58,9 @@
       </ul>
     </div>
   </div>
-
+  <p class="notice"></p>
+  <span class="label label-info" style="text-align: center;"><%= flash[:notice] %></span>
+  <span class="label label-danger"><%= flash[:error] %></span>
 <!--   <div class="row" style="padding: 0 10px 0 10px;">
     <div class="col-lg-12">
         <ul class="leftNav">
