--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,6 +19,10 @@
   body {
     
   }
+  
+  .container {
+    max-width: 1000px;
+  }
 
   a:hover {
     text-decoration: none;
@@ -135,7 +139,7 @@
     display: block;
     font-size: 21px;
     color: #5f5f5f;
-    font-family: Quicksand, Glegoo, Georgia, serif;
+    font-family: Quicksand, Glegoo, Georgia;
     text-transform: lowercase;
   }
   #nav ul.main li a:hover,
