--- a/app/views/orders/_progress_bar.html.erb
+++ b/app/views/orders/_progress_bar.html.erb
@@ -1,19 +1,21 @@
+
+
 <div class="row bs-wizard" style="border-bottom:0;">
-    <div class="col-xs-4 col-centered bs-wizard-step complete ">
+    <div class="col-xs-4 col-centered bs-wizard-step <%= current_order_step_status("show") %> ">
       <div class="text-center bs-wizard-stepnum">Step 1</div>
       <div class="progress"><div class="progress-bar"></div></div>
       <a href="#" class="bs-wizard-dot"></a>
       <div class="bs-wizard-info text-center">確認商品</div>
     </div>
     
-    <div class="col-xs-4 bs-wizard-step active"><!-- complete -->
+    <div class="col-xs-4 bs-wizard-step <%= current_order_step_status("checkout") %>"><!-- complete -->
       <div class="text-center bs-wizard-stepnum">Step 2</div>
       <div class="progress"><div class="progress-bar"></div></div>
       <a href="#" class="bs-wizard-dot"></a>
       <div class="bs-wizard-info text-center">填寫寄送資訊</div>
     </div>
     
-    <div class="col-xs-4 bs-wizard-step disabled"><!-- complete -->
+    <div class="col-xs-4 bs-wizard-step <%= current_order_step_status("confirmed") %>"><!-- complete -->
       <div class="text-center bs-wizard-stepnum">Step 3</div>
       <div class="progress"><div class="progress-bar"></div></div>
       <a href="#" class="bs-wizard-dot"></a>
