--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -32,9 +32,10 @@
 
 
     <%= simple_form_for @order_item, html: { :class => 'form-inline' } do |f| %>
-      <%= f.input :quantity, as: :integer, label: "數量： ", input_html: { value: 1, max: 3, min: 1, style:"width:70px;"  }  %>
+      <%= f.input :quantity, as: :integer, label: "數量： ",
+              input_html: { value: 1, max: 3, min: 1, style:"width:70px;"  }  %>
       <%= f.input :product_id, as: :hidden, input_html: {value: @product.id}%>
-      <%= f.button :submit, "加到購物籃", input_html: { text: 1},  %>
+      <%= f.button :submit, "加到購物籃" %>
     <% end %>
 
     <br><hr>
