--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,14 +18,38 @@
 
 </head>
 <body>
+<nav class="navbar ">
+  <div class="container">
+    <div class="navbar-header">
+      <%= link_to root_path do %>
+        <div class="logo" >
+          <h1 style="display: inline-block">Shimmer<span> discover fasion online</span></h1>
+        </div>
+      <% end %>
+      <div class="topLeft">
+        <% if current_user %>
+          <span class="glyphicon glyphicon-user" aria-hidden="true"></span> <%= current_user.name %>
+          <%= link_to("登出", destroy_user_session_path, :method => :delete ) %>
+        <% elsif %>
+          <%= link_to("登入", new_user_session_path ) %>
+        <% end%>
+        <div class="cart">
+          <%= link_to order_path, style: 'color: black' do %>
+            <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>
+            購物車(<%= current_order.quantity %>) 結賬
+          <% end %>
+        </div>
+      </div>
+    </div>
+  </div><!-- /.container -->
+</nav><!-- /.navbar -->
+
 <div class="container">
-  <div class="row">
-    <div class="col-lg-12">
-      <div class="topBanner">
+
+<!--       <div class="topBanner">
         <%= link_to root_path do %>
           <div class="logo" style="display: inline-block">
             <h1 style="display: inline-block">Shimmer<span> discover fasion online</span></h1>
-            <!-- <p>discover fasion online</p> -->
           </div>
         <% end %>
         <div class="topLeft">
@@ -45,12 +69,10 @@
         <div class="left" style="display: inline-block">
           <%= image_tag "FB-f-Logo__blue_100.png", width: "20px", height: "20px" %> facebook
         </div>
-      </div>
-    </div>
-  </div>
+      </div> -->
 
-  <div class="row">
-    <p>
+
+<!--   <div class="row">
     <div id="nav">
       <ul class="main">
          <li><a href="/categories/new_arrival" alt="New Arrval" <%= current_link_class(new_arrival_categories_path) %> >本月新貨</a></li>
@@ -61,7 +83,30 @@
          <li class="last"><a href="/categories/about_us" alt="New" <%= current_link_class(category_path("about_us")) %>>關於我們</a></li>
       </ul>
     </div>
-  </div>
+  </div> -->
+
+    <nav class="navbar">
+
+        <div class="navbar-header" >
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#newNav" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar" style="background-color: black"></span>
+            <span class="icon-bar" style="background-color: black"></span>
+            <span class="icon-bar" style="background-color: black"></span>
+          </button>
+        </div>
+        <div id="newNav" class="collapse navbar-collapse">
+          <ul class="nav navbar-nav main">
+            <li><a href="/categories/new_arrival" alt="New Arrval" <%= current_link_class(new_arrival_categories_path) %> >本月新貨</a></li>
+            <li><a href="/categories/Tops" alt="Accessories" <%= current_link_class(category_path("Tops")) %>>上衣</a></li>     
+            <li><a href="/categories/art" alt="Art" <%= current_link_class(category_path("Art")) %> >Art</a></li>          
+            <li><a href="/categories/sale" alt="Sale" <%= current_link_class(category_path("sale")) %> >聯絡小幫手</a></li>          
+            <li><a href="/categories/about_us" alt="New" <%= current_link_class(category_path("about_us")) %>>關於我們</a></li>
+          </ul>
+        </div><!-- /.nav-collapse -->
+
+    </nav><!-- /.navbar -->
+
   <p class="notice"></p>
   <span class="label label-info"><%= flash[:notice] %></span>
   <span class="label label-danger"><%= flash[:error] %></span>
@@ -85,8 +130,9 @@
 
   <%= yield %>
 
-</div>
+
 <%= yield :footer%>
+</div>
 </body>
 </html>
 
