order controller completed.

--- a/app/views/orders/_progress_bar.html.erb
+++ b/app/views/orders/_progress_bar.html.erb
@@ -8,7 +8,7 @@
       <div class="bs-wizard-info text-center">確認商品</div>
     </div>
     
-    <div class="col-xs-4 bs-wizard-step <%= current_order_step_status("checkout") %>"><!-- complete -->
+    <div class="col-xs-4 bs-wizard-step <%= current_order_step_status("fill_in_information") %>"><!-- complete -->
       <div class="text-center bs-wizard-stepnum">Step 2</div>
       <div class="progress"><div class="progress-bar"></div></div>
       <a href="#" class="bs-wizard-dot"></a>
