--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,7 +17,7 @@
 @import "bootstrap";
 
   body {
-    
+    font-family: Quicksand, "Helvetica Neue", Helvetica, Arial, sans-serif;
   }
   
   .container {
