--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -52,7 +52,7 @@
     </div>
 <br>  
 
-  <%= link_to checkout_order_path do %>
+  <%= link_to fill_in_information_order_path do %>
     <button class="btn btn-primary" >下一步</button>
   <% end %>
 
