--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -98,10 +98,10 @@
         <div id="newNav" class="collapse navbar-collapse">
           <ul class="nav navbar-nav main">
             <li><a href="/categories/new_arrival" alt="New Arrval" <%= current_link_class(new_arrival_categories_path) %> >本月新貨</a></li>
-            <li><a href="/categories/Tops" alt="Accessories" <%= current_link_class(category_path("Tops")) %>>上衣</a></li>     
-            <li><a href="/categories/art" alt="Art" <%= current_link_class(category_path("Art")) %> >Art</a></li>          
-            <li><a href="/categories/sale" alt="Sale" <%= current_link_class(category_path("sale")) %> >聯絡小幫手</a></li>          
-            <li><a href="/categories/about_us" alt="New" <%= current_link_class(category_path("about_us")) %>>關於我們</a></li>
+            <li><a href="/categories/Tops"  <%= current_link_class(category_path("Tops")) %>>上衣</a></li>     
+            <li><a href="/categories/Test"  <%= current_link_class(category_path("Test")) %> >褲子</a></li>          
+            <li><a href="/categories/sale" <%= current_link_class(category_path("sale")) %> >聯絡小幫手</a></li>          
+            <li><a href="/categories/about_us"  <%= current_link_class(category_path("about_us")) %>>關於我們</a></li>
           </ul>
         </div><!-- /.nav-collapse -->
 
