--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -238,3 +238,35 @@
     font-family: myfont;
     src: url('myfont.wof') format('truetype');
   }
+
+
+  .imageHolder {
+    width: 100%;
+    height: 300px;
+    text-align: center;
+    -border: black 1px solid;
+
+    margin: 0 auto;
+    
+  }
+  .imageHolder img {
+    vertical-align: middle;
+    max-width: 98%;
+    margin: 0;
+    max-height: 300px;
+
+  }
+  .imageHolder .helper{
+    display: inline-block;
+    height: 100%;
+    vertical-align: middle;
+    background-color: red;
+  }
+  
+  .productTitle{
+    color: #000;
+    text-align: center;
+  }
+  .productPrice{
+    text-align: center;
+  }
