--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -14,21 +14,25 @@
         </tr>
       </thead>
       <tbody>
-        <% @order.order_items.includes(:product).each_with_index do |item, index| %>
-          <tr style="vertical-align: middle; height: 80px">
+        <% if !@order.order_items.empty? %>
+          <% @order.order_items.includes(:product).each_with_index do |item, index| %>
+            <tr style="vertical-align: middle; height: 80px">
 
-            <td>
-              <%= image_tag item.product.product_attachments.where(:image_type => 'main').first.image_url(:thumb), style: 'max-height: 70px; max-width: 100px ' %>
-            </td>
-            <td>
-              <%= item.product.title %>
-            </td>
-            <td> <%= item.quantity %> </td>
-            <td> <%= number_to_currency(item.price, precision: 0) %> 
-              
-            </td>
-            <td> <%= button_to  'X', item, method: :delete, class: 'btn btn-default', data: {confirm: "確認移除商品嗎？"} %></td>
-          </tr>
+              <td>
+                <%= image_tag item.product.product_attachments.where(:image_type => 'main').first.image_url(:thumb), style: 'max-height: 70px; max-width: 100px ' %>
+              </td>
+              <td>
+                <%= item.product.title %>
+              </td>
+              <td> <%= item.quantity %> </td>
+              <td> <%= number_to_currency(item.price, precision: 0) %> 
+                
+              </td>
+              <td> <%= button_to  'X', item, method: :delete, class: 'btn btn-default', data: {confirm: "確認移除商品嗎？"} %></td>
+            </tr>
+          <% end %>
+        <% else %>
+          <tr><td colspan=5>購物車目前沒有商品</td> </tr>
         <% end %>
       </tbody>
     </table>
