--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,183 +10,21 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
- *= require_tree .
  *= require_self
+ *= require_tree .
  */
+
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
-  body {
-    font-family: Quicksand, "Helvetica Neue", Helvetica, Arial, sans-serif;
-  }
-  
-  .container {
-    max-width: 1000px;
+  @font-face {
+    font-family: "vladmir script";
+    src: url(font_path("vlad.woff2"));
   }
 
-  a:hover {
-    text-decoration: none;
+  .label {
+    font-size: 14px;
   }
-
-  .logo{
-      margin-bottom: 0px;
-      margin-top: 20px;
-      display: inline-block;
-  }
-
-  .logo h1,
-  .logo h2{
-    font-family: Pacifico, sans-serif;
-      color: #19a7ba;
-      margin: 5px 0 5px;
-      text-align: left;
-      font-size: 60px;
-      line-height: 55px;
-      font-weight: 500;
-      /*letter-spacing: -1px;*/
-  }
-
-  .logo h1 span,
-  .logo h2 span{
-      font-size: 30px;
-      color: #aaa;
-      font-weight: 100;
-      font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-      @media (max-width: 768px) {
-          display: none;
-      }
-  }
-
-  .logo h1 a,
-  .logo h2 a{
-      color: #333;
-      text-decoration: none;
-      -webkit-transition: color 0.3s ease-in-out, text-decoration 0.5s ease-in-out;
-         -moz-transition: color 0.3s ease-in-out, text-decoration 0.5s ease-in-out;
-          -ms-transition: color 0.3s ease-in-out, text-decoration 0.5s ease-in-out;
-           -o-transition: color 0.3s ease-in-out, text-decoration 0.5s ease-in-out;
-              transition: color 0.3s ease-in-out, text-decoration 0.5s ease-in-out;
-  }
-
-  .logo h1 a:hover,
-  .logo h2 a:hover{
-      color: #888;
-      text-decoration: underline;
-  }
-  .logo p{
-    font-family: 'Roboto Condensed', sans-serif;
-    font-size: 25px;
-    padding-left: 0px;
-    color: #ccc;
-    
-  }
-
-  .productTitle h3 {
-    margin: 0;
-  }
-  /*.logo {
-    
-    font-family: 'Roboto Condensed', sans-serif;
-    margin-bottom: 20px;
-
-  }
-  .logo h1 {
-    font-weight: 700;
-    letter-spacing: -1px;
-    line-height: 28px;
-  }
-  .logo span {
-    color: black;
-    font-weight: normal;
-  }
-  .logo p {
-    //color: #aaa;
-    margin-left: 5px;
-  }*/
-
-  .leftNav {
-    font-size: 2em;
-    list-style: none;
-    font-weight: normal;
-    font-family: Quicksand, 'Glegoo', serif;
-    text-align: left;
-    padding: 0px;
-    line-height: 1.4em;
-    color: #5f5f5f;
-  }
-  .leftNav > li {
-    display: inline-block;
-    float: left;
-    padding-right: 40px;
-    border-bottom: #f00 solid 4px;
-  }
-
-  /* header nav */
-  #nav {
-    width: 100%;
-    left: 0;
-    top: 138px;
-  }
-  #nav ul.main {
-    
-    border-bottom: 3px solid #E6E6E6;
-    height: 40px;
-    position: relative;
-  }
-
-  #nav ul.main li {
-    display: inline-block;
-    height: 40px;
-    margin: 0 55px 0 0;
-  }
-  #nav ul.main li a {
-    height: 40px;
-    display: block;
-    font-size: 21px;
-    color: #5f5f5f;
-    font-family: Quicksand, Glegoo, Georgia;
-    text-transform: lowercase;
-  }
-  #nav ul.main li a:hover,
-  #nav ul.main li a.active {
-    color: #99cccc;
-  }
-  #nav ul.main li a.active {
-    border-bottom: 3px solid #666;
-  }
-  #nav ul.main li.last {
-    right: 0;
-    margin: 0;
-    float: none;
-  }
-
-  /* newNav */
-  #newNav {
-    font-family: Quicksand, Glegoo, Georgia;
-    width: 100%;
-
-  }
-  #newNav ul.main {
-    width: 100%;
-    border-bottom: 0px;
-    display: block;
-    margin-bottom: 3px;
-    @media (min-width: 768px) {
-        border-bottom: 3px solid #E6E6E6;
-    }
-  }
-
-  #newNav ul.main li {
-    display: block;
-    position: relative;
-    margin: 0 0 0 30px;
-    border-bottom: 3px solid #E6E6E6;
-    margin-bottom: -3px;  
-    @media (min-width: 768px) {
-        float: left;
-    }
-  }
-
 
   #newNav ul.main li a {
     font-size: 21px;
@@ -229,19 +67,34 @@
       right: 20px;
       top: 10px;
   }
-  .cart {
+  .topLeftNav {
       display: inline-block;
+      
       margin-left: 20px;
+      position: absolute;
+      top: 10px;
+      right: 15px;
+      a {
+        color: #666;
+      }
+  }
+
+  @media screen and (max-width: 768px) {
+    .cart { display: none; }
+  }
+  @media screen and (min-width: 768px) {
+    #cart_link, #user_link { display: none; }
   }
 
   @font-face {
     font-family: myfont;
     src: url('myfont.wof') format('truetype');
   }
+  
 
 
   .imageHolder {
-    width: 100%;
+    
     height: 300px;
     text-align: center;
     -border: black 1px solid;
@@ -253,14 +106,13 @@
     vertical-align: middle;
     max-width: 98%;
     margin: 0;
-    max-height: 300px;
+    height: 280px;
 
   }
   .imageHolder .helper{
     display: inline-block;
     height: 100%;
     vertical-align: middle;
-    background-color: red;
   }
   
   .productTitle{
@@ -270,3 +122,18 @@
   .productPrice{
     text-align: center;
   }
+
+  .row-centered {
+      text-align:center;
+  }
+  .col-centered {
+      display:inline-block;
+      float:none;
+      /* reset the text-align */
+      text-align:left;
+      /* inline-block space fix */
+      margin-right:-4px;
+  }
+
+
+
