--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,78 +1,137 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-  <title>Shimmer</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
-  <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed' rel='stylesheet' type='text/css'>
-  <link href='http://fonts.googleapis.com/css?family=Glegoo:400,700' rel='stylesheet' type='text/css'>
-  <link href='http://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
-  <link href='http://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
-  <link href="//cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.0/bootstrap3-editable/css/bootstrap-editable.css" rel="stylesheet"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <title>Shimmer</title>
+    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+    <%= csrf_meta_tags %>
+    <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Glegoo:400,700' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
+    <link href="//cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.0/bootstrap3-editable/css/bootstrap-editable.css" rel="stylesheet"/>
+    <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css">
+    <link href="http://fonts.googleapis.com/css?family=Josefin+Slab:100,300,400,600,700,100italic,300italic,400italic,600italic,700italic" rel="stylesheet" type="text/css">
 <script src="//cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.0/bootstrap3-editable/js/bootstrap-editable.min.js"></script>
 
 </head>
 <body>
-<nav class="navbar ">
-  <div class="container">
-    <div class="navbar-header">
-      <%= link_to root_path do %>
-        <div class="logo" >
-          <h1 style="display: inline-block">Shimmer<span> discover fasion online</span></h1>
-        </div>
+  
+  <div class="brand">
+    <%= link_to 'Shimmer', root_path %>
+  </div>
+  <div class="address-bar"> 台中一中街益民商圈 | Korean fashion closet | 最新韓國流行服飾</div>
+  <div class="topLeftNav">
+    <% if current_user %>
+      <%= link_to( destroy_user_session_path, :method => :delete, class: 'btn btn-default' ) do %>
+        <span class="glyphicon glyphicon-user" aria-hidden="true"></span> <%= current_user.name %> 登出
       <% end %>
-      <div class="topLeft">
-        <% if current_user %>
-          <span class="glyphicon glyphicon-user" aria-hidden="true"></span> <%= current_user.name %>
-          <%= link_to("登出", destroy_user_session_path, :method => :delete ) %>
-        <% elsif %>
-          <%= link_to("登入", new_user_session_path ) %>
-        <% end%>
-        <div class="cart">
-          <%= link_to order_path, style: 'color: black' do %>
-            <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>
-            購物車(<%= current_order.quantity %>) 結賬
-          <% end %>
+    <% elsif %>
+      <%= link_to("登入", new_user_session_path, class: 'btn btn-default' ) %>
+    <% end%>
+
+    <%= link_to order_path, class: 'btn btn-default' do %>
+      <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>
+      購物車 (<%= current_order.quantity %>)
+    <% end %>
+
+  </div>
+
+  <!-- Navigation -->
+  <nav class="navbar navbar-default" role="navigation">
+    <div class="container">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <!-- navbar-brand is hidden on larger screens, but visible when the menu is collapsed -->
+        <a class="navbar-brand" href="index.html">Shimmer</a>
+      </div>
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav">
+          <li><a href="/categories/new_arrival" alt="New Arrval" <%= current_link_class(new_arrival_categories_path) %> >本月新貨</a></li>
+          <li><a href="/categories/Tops"  <%= current_link_class(category_path("Tops")) %>>上衣</a></li>     
+          <li><a href="/categories/Test"  <%= current_link_class(category_path("Test")) %> >褲子</a></li>          
+          <li><a href="#" >聯絡小幫手</a></li>          
+          <li><a href="/about_us"  <%= current_link_class(about_us_path) %>>關於我們</a></li>
+          <li id="cart_link">
+            <%= link_to order_path do %>
+              <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>
+              購物車(<%= current_order.quantity %>) 結賬
+            <% end %>
+          </li>
+          <li id="user_link">
+            <% if current_user %>
+              <span class="glyphicon glyphicon-user" aria-hidden="true"></span> <%= current_user.name %>
+              <%= link_to("登出", destroy_user_session_path, :method => :delete) %>
+            <% elsif %>
+              <%= link_to("登入", new_user_session_path) %>
+            <% end%>
+          </li>
+        </ul>
+      </div>
+      <!-- /.navbar-collapse -->
+    </div>
+    <!-- /.container -->
+  </nav>
+
+
+  <div class="container">
+    <div class="row" >
+      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+        <%= render_notice_alert %>
+        <%= render_alert_alert %>
+        <%= render_error_alert %>
+      </div>
+    </div>
+    <div class="row box">
+        <%= yield %>
+    </div>
+
+    <div class="row">
+      <div class="box">
+        <div class="col-lg-12">
+          <hr>
+          <h2 class="intro-text text-center">Beautiful boxes
+            <strong>to showcase your content</strong>
+          </h2>
+          <hr>
+          <p>Use as many boxes as you like, and put anything you want in them! They are great for just about anything, the sky's the limit!</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc placerat diam quis nisl vestibulum dignissim. In hac habitasse platea dictumst. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
         </div>
       </div>
     </div>
-  </div><!-- /.container -->
-</nav><!-- /.navbar -->
 
-<div class="container">
-    <nav class="navbar">
-        <div class="navbar-header" >
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#newNav" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar" style="background-color: black"></span>
-            <span class="icon-bar" style="background-color: black"></span>
-            <span class="icon-bar" style="background-color: black"></span>
-          </button>
+  </div>
+  <!-- /.container -->
+
+  <footer>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 text-center">
+          <%= yield :footer%>
+          <p>Copyright &copy; Your Website 2014</p>
         </div>
-        <div id="newNav" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav main">
-            <li><a href="/categories/new_arrival" alt="New Arrval" <%= current_link_class(new_arrival_categories_path) %> >本月新貨</a></li>
-            <li><a href="/categories/Tops"  <%= current_link_class(category_path("Tops")) %>>上衣</a></li>     
-            <li><a href="/categories/Test"  <%= current_link_class(category_path("Test")) %> >褲子</a></li>          
-            <li><a href="#" >聯絡小幫手</a></li>          
-            <li><a href="/about_us"  <%= current_link_class(about_us_path) %>>關於我們</a></li>
-          </ul>
-        </div><!-- /.nav-collapse -->
-
-    </nav><!-- /.navbar -->
-  <p class="notice"></p>
-  <span class="label label-info"><%= flash[:notice] %></span>
-  <span class="label label-danger"><%= flash[:alert] %></span>
-  <span class="label label-danger"><%= flash[:error] %></span>
-
-  <%= yield %>
+      </div>
+    </div>
+  </footer>
 
 
-<%= yield :footer%>
-<br><br><br><br><br><br><br>
-</div>
+  <!-- Script to Activate the Carousel -->
+  <script>
+  $('.carousel').carousel({
+    interval: 5000 //changes the speed
+  })
+  </script>
+
+
+
 </body>
 </html>
 
