--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,7 +50,7 @@
           <span class="icon-bar"></span>
         </button>
         <!-- navbar-brand is hidden on larger screens, but visible when the menu is collapsed -->
-        <a class="navbar-brand" href="index.html">Shimmer</a>
+        <a class="navbar-brand" href="<%= root_path %>">Shimmer</a>
       </div>
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -63,12 +63,11 @@
           <li id="cart_link">
             <%= link_to order_path do %>
               <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>
-              購物車(<%= current_order.quantity %>) 結賬
+              購物車(<%= current_order.quantity %>)
             <% end %>
           </li>
           <li id="user_link">
             <% if current_user %>
-              <span class="glyphicon glyphicon-user" aria-hidden="true"></span> <%= current_user.name %>
               <%= link_to("登出", destroy_user_session_path, :method => :delete) %>
             <% elsif %>
               <%= link_to("登入", new_user_session_path) %>
@@ -116,7 +115,7 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <%= yield :footer%>
-          <p>Copyright &copy; Your Website 2014</p>
+          <p>Copyright &copy; <span class="brand-logo" style="margin: 0 8px;">Shimmer</span> 2015</p>
         </div>
       </div>
     </div>
