--- a/app/views/orders/confirmed.html.erb
+++ b/app/views/orders/confirmed.html.erb
@@ -1,3 +1,5 @@
 <%= render "progress_bar" %>
-<h1 class="text-center"><strong>Thank You!</strong></h1>
-<h2 class="text-center">訂單已確認，謝謝您的訂購</h2>
+<div style="margin-top: 30px">
+  <h1 class="text-center"><strong>Thank You!</strong></h1>
+  <h2 class="text-center">訂單已確認，謝謝您的訂購</h2>
+</div>
