--- a/app/views/admin/products/new.html.erb
+++ b/app/views/admin/products/new.html.erb
@@ -1,9 +1,6 @@
 <h1>New Product</h1>
 <div class="container">
   <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-    <%= render 'products/form' %>
+    <%= render 'form', url: admin_products_path %>
   </div>
 </div>
-
-
-<%= link_to 'Back', products_path %>
