--- a/app/views/orders/_progress_bar.html.erb
+++ b/app/views/orders/_progress_bar.html.erb
@@ -1,4 +1,4 @@
-<div class="bs-wizard" style="border-bottom:0;">
+<div class="row bs-wizard" style="border-bottom:0;">
     <div class="col-xs-4 bs-wizard-step <%= current_order_step_status("show") %> ">
       <div class="text-center bs-wizard-stepnum">Step 1</div>
       <div class="progress"><div class="progress-bar"></div></div>
