--- a/app/views/shimmer/about_us.html.erb
+++ b/app/views/shimmer/about_us.html.erb
@@ -1,7 +1,18 @@
-
-
-  <%= image_tag "banner.jpg", style: "width: 100%" %> <br><br>
+  <div class="col-lg-12">
+    <hr>
+    <h2 class="intro-text text-center">About
+      <strong>Shimmer</strong>
+    </h2>
+    <hr>
+    <p>地址：台中市北區一中街 136-32 號 1 樓</p>
+    <p>營業時間：每日 15:00 ~ 22:00，每週一公休</p>
+    <%= image_tag "banner.jpg", style: "width: 100%" %> <br><br>
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3640.5193345941275!2d120.68691779999996!3d24.1535129!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x34693d67a60bdeb5%3A0x5633df0e8223ce41!2zNDA05Y-w5Lit5biC5YyX5Y2A5LiA5Lit6KGXMTM26Jmf!5e0!3m2!1szh-TW!2stw!4v1438527476156" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+
+  </div>
+
+
+
 
 
 <h2><%= Faker::Company.name %></h2>
